<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math_title"
                android:layout_weight="1"
                android:onClick="startMathIntro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false" />

            <View style="@style/divider" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reading_title"
                android:layout_weight="1"
                android:onClick="startReadingIntro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false" />

            <View style="@style/divider" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/writing_title"
                android:layout_weight="1"
                android:onClick="startWritingLanguageIntro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false" />

            <View style="@style/divider" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/essay_title"
                android:layout_weight="1"
                android:onClick="startEssayIntro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>