<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/intro"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:singleLine="false"
                        android:gravity="center_horizontal" />

                    <View style="@style/divider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/math_intro_0" />

                    <View style="@style/divider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/math_intro_1" />

                    <View style="@style/divider" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/calc_allowed_start"
                android:id="@+id/calc_allowed_button"
                style="@style/AppTheme"
                android:layout_weight="0"
                android:onClick="startMathCalcTest" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/calc_not_allowed_start"
                android:id="@+id/calc_not_allowed_button"
                style="@style/AppTheme"
                android:layout_weight="0"
                android:onClick="startMathNoCalcTest" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>